# libmio

./: CMakeLists.txt  README.md  antlr.template  magnetization.tec
cmake/: antlr4.cmake  args.cmake  catch2.cmake  rapidxml.cmake  taojson.cmake
grammar/: MerrillTecplot.g4  Tecplot.g4
include/: Visitor.hpp  tecplot.hpp  utilities.hpp
src/: CMakeLists.txt  tec2hdf.cpp  tecplot.cpp  utilities.cpp
src/grammar/: CMakeLists.txt  MerrillTecplot.interp  MerrillTecplot.tokens  MerrillTecplotBaseVisitor.cpp  MerrillTecplotBaseVisitor.h  MerrillTecplotLexer.cpp  MerrillTecplotLexer.h  MerrillTecplotLexer.interp  MerrillTecplotParser.cpp  MerrillTecplotParser.h  MerrillTecplotVisitor.cpp  MerrillTecplotVisitor.h
test/: CMakeLists.txt  test_TecplotFileData.cpp  test_utilities.cpp
test-data/: test1.tec
toys/: CMakeLists.txt
toys/args/: CMakeLists.txt
toys/args/toy01/: CMakeLists.txt  main.cpp
